# compare-structures-skill

./: .gitignore  README.md  SKILL.md  analyze.py  chimerax_script.py  pyproject.toml
compare_structures/: __init__.py  chimerax_runner.py  cli.py  clustering.py  errors.py  facts_builder.py  metrics.py  thresholds.py  validators.py
docs/: manual_review_checklist.md
docs/superpowers/plans/: 2026-04-09-compare-structures-implementation.md  2026-04-09-compare-structures-rich-report-plan.md
docs/superpowers/specs/: 2026-04-09-compare-structures-design.md  2026-04-09-compare-structures-rich-report-redesign.md
examples/1ake_vs_4ake/: aligned.cif  external_metadata.json  facts.json  raw.json  report.md
schemas/: error.schema.json  external_metadata.schema.json  facts.schema.json  raw.schema.json
templates/: report_prompt.md
tests/: conftest.py  test_chimerax_runner.py  test_cli.py  test_clustering.py  test_errors.py  test_example_report_snapshot.py  test_external_metadata_schema.py  test_facts_builder.py  test_integration.py  test_metrics.py  test_report_prompt_lint.py  test_thresholds.py  test_validators.py
tests/fixtures/external_metadata/: all_failed.json  all_ok.json  partial_failure.json
